--- a/.github/workflows/sonar_and_coverall.yml
+++ b/.github/workflows/sonar_and_coverall.yml
@@ -38,7 +38,7 @@ jobs:
       - name: SonarCloud Test
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONARCLOUD_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B verify sonar:sonar \
           -Dsonar.organization=apache \
