--- a/.github/workflows/update_website.yml
+++ b/.github/workflows/update_website.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           java-version: 1.8
       - name: Setting git account
-        - run: git config --global user.name "${{ secrets.GIT_USER }}"
+        run: git config --global user.name "${{ secrets.GIT_USER }}"
       - name: Push to web-site Proj
         run: mvn compile scm-publish:publish-scm -Dusername=samginshen -Dpassword=sagin0818 --file site/pom.xml
