--- a/.github/workflows/update_website.yml
+++ b/.github/workflows/update_website.yml
@@ -1,7 +1,16 @@
 name: Java CI
 
-on: [push]
-
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - 'docs/**'
+    pull_request:
+      branches:
+        - main
+      paths:
+        - 'docs/**'
 jobs:
   build:
     runs-on: ubuntu-latest
