--- a/.github/workflows/update_website.yml
+++ b/.github/workflows/update_website.yml
@@ -3,12 +3,12 @@ name: Update website
 on:
   push:
     branches:
-      - master
+      - update_document
     paths:
       - 'docs/**'
     pull_request:
       branches:
-        - master
+        - update_document
       paths:
         - 'docs/**'
 jobs:
