--- a/.github/workflows/sonar_and_coverall.yml
+++ b/.github/workflows/sonar_and_coverall.yml
@@ -41,8 +41,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B verify sonar:sonar \
-          -Dsonar.organization=apache \
-          -Dsonar.projectKey=apache_incubator-iotdb \
+          -Dsonar.organization=samginshen \
+          -Dsonar.projectKey=samginshen_iotdb \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=${{ env.SONAR_TOKEN }} \
           -DskipTests -pl '!distribution' -am
