--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          mvn -B verify sonar:sonar \
-          -Dsonar.organization=samginshen \
-          -Dsonar.projectKey=samginshen_iotdb \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=$${{ secrets.SONAR_TOKEN }} \
-          -DskipTests -pl '!distribution' -am
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
